--- a/javascript/package.json
+++ b/javascript/package.json
@@ -6,7 +6,6 @@
     "name": "Thoughtworks",
     "url": "http://www.thoughtworks.com"
   },
-  "dependencies": {},
   "devDependencies": {
     "chai": "^3.3.0",
     "chai-gulp-helpers": "0.0.3",
@@ -15,6 +14,7 @@
     "gulp-task-listing": "^1.0.1",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.3.3",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "buffertools": "^2.1.4"
   }
 }
